--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="pizza.css">
 
  
 </head>
