--- a/index.html
+++ b/index.html
@@ -46,10 +46,21 @@
 
  <div class="Contact_details">
   <h2>Contact Details</h2>
-  Contact us at: 0115590001 
   
-  <br> info@perfectpizza.co.za     
- </div>
+
+  <div class="data1">
+      Contact us at: 0115590001 
+  
+  <br> info@perfectpizza.co.za 
+  </div>
+  
+  <div class="data2">
+   Delicious Pizza
+<br> Pretoria Road
+<br> Kempton Park
+</div>
+</div>
+ 
           
 
 </body>
